<resources>
    		<string name="title_app">Deformed Invaders</string>
		    <string name="title_main_phase">Deformed Invaders</string>
		    <string name="title_design_phase">Designing your character.</string>
		    <string name="title_paint_phase">Painting your character.</string>
		    <string name="title_deformation_phase">Animating your character.</string>
		    <string name="title_character_selection_phase">Selecting a character.</string>
		    <string name="title_level_selection_phase">Selecting a level.</string>
			<string name="title_animation_section_run">Run</string>
			<string name="title_animation_section_jump">Jump</string>
			<string name="title_animation_section_crouch">Crouch</string>
			<string name="title_animation_section_attack">Attack</string>
			<string name="title_level_section_moon">Moon</string>
			<string name="title_level_section_stonehenge">Stonehenge</string>
			<string name="title_level_section_egypt">Egypt</string>
			<string name="title_level_section_rome">Rome</string>
			<string name="title_level_section_newyork">New York</string>
			<string name="text_level_description_moon">Moon, AD 2014.</string>
			<string name="text_level_description_stonehenge">Stonehenge, 3125 BC.</string>
			<string name="text_level_description_egypt">Ancient Egypt, 2562 BC.</string>
			<string name="text_level_description_rome">Roman Empire, 435 BC.</string>
			<string name="text_level_description_newyork">New York City, AD 1945.</string>
			<string name="title_menu_twitter">Twitter</string>
			<string name="title_menu_facebook">Facebook</string>
			<string name="title_menu_music">Music</string>
			<string name="title_menu_tips">Tips</string>
			<string name="title_dialog_size">Size:</string>
			<string name="title_dialog_color">Color:</string>
			<string name="title_dialog_eyes">Eyes:</string>
			<string name="title_dialog_mouths">Mouths:</string>
			<string name="title_dialog_weapons">Weapons:</string>
			<string name="title_dialog_trinkets">Trinkets:</string>
			<string name="title_dialog_helmets">Helmets:</string>
			<string name="title_alert_enemies">Enemies:</string>
			<string name="title_alert_obstacles">Obstacles:</string>
			<string name="title_alert_missiles">Missiles:</string>
			<string name="title_alert_initial">Intelligence Report.\n</string>
			<string name="title_alert_final">\nGood luck.</string>
			<string name="title_alert_weaknesses_enemies">Known Weaknesses: Attack, Jump.</string>
			<string name="title_alert_weaknesses_obstacles">Known Weaknesses: Jump.</string>
			<string name="title_alert_weaknesses_missiles">Known Weaknesses: Crouch.</string>
			<string name="text_progressBar">Loading store data.</string>
			<string name="text_progressBar_level">Loading level statistics.</string>
			<string name="text_progressBar_preferences">Loading game preferences.</string>
			<string name="text_progressBar_character_list">Loading character: </string>
			<string name="text_progressBar_completed">Loading stored data completed.</string>
			<string name="text_tip_design_draw_title">Drawing your character\'s shape.</string>
			<string name="text_tip_design_draw_description">Draw the shape for your character using your finger. The shape should not be cutting itself.</string>
			<string name="text_tip_problem_title">There\'s a problem.</string>
			<string name="text_tip_design_noregular_description">The shape should not be cutting itself.</string>
			<string name="text_tip_design_outside_description">The shape is needed to be inside the grey rectangle.</string>
			<string name="text_tip_design_touch_title">Resizing your character.</string>
			<string name="text_tip_design_drag_description">You can move your character using this drag gesture.</string>
			<string name="text_tip_design_rotate_description">You can rotate your character using this rotate gesture.</string>
			<string name="text_tip_design_zoom_description">You can lengthen or shrink your character using this zoom gesture.</string>
			<string name="text_tip_paint_tools_title">Painting your character.</string>
			<string name="text_tip_paint_pencil_description">You can draw extra details on your character with the pencil tool.</string>
			<string name="text_tip_paint_bucket_description">You can chage the color of your character with the bucket tool.</string>
			<string name="text_tip_paint_sticker_description">You can add predesigned stickers to your character with the sticker tool.</string>
			<string name="text_tip_paint_zoom_description">You can lengthen or shrink your character using this zoom gesture. Also you can restore your character to it\'s original position using this double touch gesture.</string>
			<string name="text_tip_deform_handles_title">Deformating your character.</string>
			<string name="text_tip_deform_handles_description">You can add and remove handles and drag them in order to deform your character.</string>
			<string name="text_tip_deform_undefined_description">You must define all the movements for your character. Remember that you can record audio for each one.</string>
			<string name="text_tip_game_title">Playing with your character.</string>
			<string name="text_tip_game_lives">Your shield can only stand for 3 strikes. Once your shield is destroy, It\'s over!</string>
			<string name="text_tip_game_crouch">You can crouch from missiles using this drag gesture.</string>
			<string name="text_tip_game_jump">You can jump from obstacles and enemies using this drag gesture.</string>
			<string name="text_tip_game_attack">You can attack enemies using this double touch gesture.</string>
			<string name="text_tip_game_complete">Completing the game you will unlock the next level. If you perfect the game, new stickers will be available for your character.</string>
			<string name="text_loading_character_title">Please wait&#x2026;</string>
			<string name="text_loading_character_description">Loading your characters and stored data.</string>
			<string name="text_processing_character_title">Please wait&#x2026;</string>
			<string name="text_processing_character_description">Procesing your character.</string>
			<string name="text_save_character_title">Saving your character.</string>
			<string name="text_save_character_description">Introduce a name for your new character.</string>
			<string name="text_save_character_confirmation">Character saved.</string>
			<string name="text_replace_character_confirmation">Character replaced.</string>
			<string name="text_select_character_confirmation">Character selected.</string>
			<string name="text_export_character_title">Please wait&#x2026;</string>
			<string name="text_export_character_description">Exporting your character.</string>
			<string name="text_import_character_title">Importing your character.</string>
			<string name="text_import_character_confirmation">Character imported.</string>
			<string name="text_delete_character_title">Deleting your character.</string>
			<string name="text_delete_character_description">Are you sure to delete this character?.</string>
			<string name="text_delete_character_confirmation">Character deleted.</string>
			<string name="text_rename_character_title">Renaming your character.</string>
			<string name="text_rename_character_description">Introduce a new name for your character.</string>
			<string name="text_rename_character_confirmation">Character renamed.</string>
			<string name="text_export_character_confirmation">Character exported.</string>
			<string name="text_audio_record_title">Recording audio.</string>
			<string name="text_audio_record_description">Record a sound for this animation.</string>
			<string name="text_audio_record_confirmation">Audio recorded.</string>
			<string name="text_audio_play_title">Playing audio.</string>
			<string name="text_audio_play_confirmation">Audio played.</string>
			<string name="text_social_share_title">Updating your status.</string>
			<string name="text_social_share_description">Make sure your text is at or under the 140 character.</string>
			<string name="text_social_photo_title">Uploading a picture.</string>
			<string name="text_social_create_character_initial">I just created</string>
			<string name="text_social_create_character_final">using #DeformedInvaders</string>
			<string name="text_social_level_completed_initial">I just completed</string>
			<string name="text_social_level_completed_middle">level with a score of</string>
			<string name="text_social_level_completed_final">using #DeformedInvaders</string>
			<string name="text_twitter_title">Twitter OAuth.</string>
			<string name="text_facebook_title">Facebook OAuth.</string>
			<string name="text_twitter_oauth_permission">Twitter permission granted.</string>
			<string name="text_twitter_oauth_sign_in">Twitter account connected.</string>
			<string name="text_twitter_post">Tweet sent.</string>
			<string name="text_facebook_oauth_permission">Facebook permission granted.</string>
			<string name="text_facebook_oauth_sign_in">Facebook account connected.</string>
			<string name="text_facebook_post">Post sent.</string>
			<string name="text_button_ok">OK</string>
		    <string name="text_button_cancel">Cancel</string>
		    <string name="desc_main_new">Create a new character.</string>
		    <string name="desc_main_select">Select a character.</string>
		    <string name="desc_main_play">Select a level.</string>
		    <string name="desc_paint_bucket">Select bucket tool.</string>
		    <string name="desc_paint_pencil">Select pencil tool.</string>
		    <string name="desc_paint_zoom">Select hand tool.</string>
		    <string name="desc_paint_next">Redo last action.</string>
		    <string name="desc_paint_prev">Undo last action.</string>
		    <string name="desc_paint_reset">Reset the texture.</string>
		    <string name="desc_paint_color">Change the bucket\'s color.</string>
		    <string name="desc_paint_size">Change the pencil\'s size.</string>
		    <string name="desc_paint_sticker">Add a new sticker.</string>
		    <string name="desc_paint_ready">Ready to define the animations.</string>
		    <string name="desc_deform_add">Add a new handle.</string>
		    <string name="desc_deform_remove">Remove a handle.</string>
		    <string name="desc_deform_move">Move a handle.</string>
		    <string name="desc_deform_reset">Reset the animation.</string>
		    <string name="desc_deform_record">Record an animation.</string>
		    <string name="desc_deform_play">Play the animation.</string>
	    	<string name="desc_select_select">Select this character.</string>
	    	<string name="desc_select_delete">Delete this character.</string>
	    	<string name="desc_select_camera">Save a picture of this character.</string>
	    	<string name="desc_select_rename">Rename this character.</string>
	    	<string name="desc_select_repaint">Repaint this character.</string>
	    	<string name="desc_select_export">Export this character.</string>
	    	<string name="desc_select_run">Play run animation.</string>
	    	<string name="desc_select_jump">Play jump animation.</string>
	    	<string name="desc_select_crouch">Play crouch animation.</string>
	    	<string name="desc_select_attack">Play attack animation.</string>
	    	<string name="desc_social_twitter">Twitter account.</string>
	    	<string name="desc_social_facebook">Facebook account.</string>
	    	<string name="desc_social_share">Share status.</string>
	    	<string name="desc_social_photo">Share a photo.</string>
	    	<string name="desc_social_wifi">Wifi connection.</string>
	    	<string name="desc_select_background">Level Background.</string>
		    <string name="desc_color_palette_secondary">Secondary color palette.</string>
		    <string name="desc_color_cursor_main">Color main cursor.</string>
		    <string name="desc_color_cursor_secondary">Color secondary cursor.</string>
		    <string name="desc_color_selected">Selected color.</string>
		    <string name="desc_dialog_arrow">Dialog arrow.</string>
</resources>