<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/Layout_Fragment_Style"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <com.creation.paint.PaintOpenGLSurfaceView style="@style/GLSurfaceView_Style"
        android:id="@+id/paintGLSurfaceViewPaint1" />

    <LinearLayout style="@style/Layout_Bottom_Left_FragmentButton_Style">

        <com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonPaint1"
            android:contentDescription="@string/desc_paint_pencil"
            android:background="@drawable/icon_tool_pencil" />

        <com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonPaint2"
            android:contentDescription="@string/desc_paint_bucket"
            android:background="@drawable/icon_tool_bucket" />
        
		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonPaint3"
            android:contentDescription="@string/desc_paint_color"
            android:background="@drawable/icon_tool_color" />
        
		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonPaint4"
            android:contentDescription="@string/desc_paint_size"
            android:background="@drawable/icon_tool_size" />
        
   		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonPaint5"
            android:contentDescription="@string/desc_paint_sticker"
            android:background="@drawable/icon_tool_sticker" />
    		    
		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonPaint6"
            android:contentDescription="@string/desc_paint_zoom"
            android:background="@drawable/icon_tool_zoom" />
		
	</LinearLayout>
  
    <LinearLayout style="@style/Layout_Bottom_Center_FragmentButton_Style">
                
		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonPaint7"
            android:contentDescription="@string/desc_paint_prev"
            android:background="@drawable/icon_tool_prev" />
                
		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonPaint8"
            android:contentDescription="@string/desc_paint_next"
            android:background="@drawable/icon_tool_next" />

    </LinearLayout>
    
    <LinearLayout style="@style/Layout_Bottom_Right_FragmentButton_Style">

     	<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
		    android:id="@+id/imageButtonPaint9"
		    android:contentDescription="@string/desc_paint_reset"
		    android:background="@drawable/icon_tool_reset" />
        		
	   	<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
	   	    android:id="@+id/imageButtonPaint10"
	   	    android:contentDescription="@string/desc_paint_ready"
	   	    android:background="@drawable/icon_tool_ready" />
   	
   	</LinearLayout>

</RelativeLayout>
