<RelativeLayout style="@style/MainFragmentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <com.create.paint.PaintGLSurfaceView style="@style/GLSurfaceViewWithButtons"
        android:id="@+id/paintGLSurfaceViewPaint1" />

    <LinearLayout style="@style/BigImageButtonLeftLayout">

        <ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonPaint1"
            android:contentDescription="@string/desc_paint_pencil"
            android:background="@drawable/icon_pencil" />

        <ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonPaint2"
            android:contentDescription="@string/desc_paint_bucket"
            android:background="@drawable/icon_bucket" />
        
		<ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonPaint3"
            android:contentDescription="@string/desc_paint_color"
            android:background="@drawable/icon_color" />
        
		<ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonPaint4"
            android:contentDescription="@string/desc_paint_size"
            android:background="@drawable/icon_size" />
        
   		<ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonPaint5"
            android:contentDescription="@string/desc_paint_eye"
            android:background="@drawable/icon_eye" />
    		    
		<ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonPaint6"
            android:contentDescription="@string/desc_paint_hand"
            android:background="@drawable/icon_hand" />
        
		<ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonPaint7"
            android:contentDescription="@string/desc_paint_prev"
            android:background="@drawable/icon_prev" />
                
		<ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonPaint8"
            android:contentDescription="@string/desc_paint_next"
            android:background="@drawable/icon_next" />
                        
		<ImageButton style="@style/BigImageButton"
		    android:id="@+id/imageButtonPaint9"
		    android:contentDescription="@string/desc_paint_reset"
		    android:background="@drawable/icon_reset" />

    </LinearLayout>
    
    <LinearLayout style="@style/BigImageButtonRightLayout">

	   	<ImageButton style="@style/BigImageButton"
	   	    android:id="@+id/imageButtonPaint10"
	   	    android:contentDescription="@string/desc_paint_ready"
	   	    android:background="@drawable/icon_ready" />
   	
   	</LinearLayout>

</RelativeLayout>