<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/Layout_Fragment_Style"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <com.character.display.DisplayOpenGLSurfaceView style="@style/GLSurfaceView_Style"
        android:id="@+id/displayGLSurfaceViewCharacterSelect1" />
    
    <TextView
        android:id="@+id/textViewCharacterSelect1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="45sp"
        android:textColor="#FFFFFF"/>
	
    <LinearLayout style="@style/Layout_Bottom_Left_FragmentButton_Style" >

        <com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonCharacterSelect2"
            android:background="@drawable/icon_game_run"
            android:contentDescription="@string/desc_select_run" />
        
        <com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonCharacterSelect3"
            android:background="@drawable/icon_game_jump"
            android:contentDescription="@string/desc_select_jump" />
        
        <com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonCharacterSelect4"
            android:background="@drawable/icon_game_crouch"
            android:contentDescription="@string/desc_select_crouch" />
        
        <com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonCharacterSelect5"
            android:background="@drawable/icon_game_attack"
            android:contentDescription="@string/desc_select_attack" />

	</LinearLayout>
	
	<LinearLayout style="@style/Layout_Bottom_Right_FragmentButton_Style">

		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
	        android:id="@+id/imageButtonCharacterSelect10"
	        android:contentDescription="@string/desc_select_export"
	        android:background="@drawable/icon_tool_export" />
	    
		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonCharacterSelect1"
            android:background="@drawable/icon_share_picture"
            android:contentDescription="@string/desc_select_camera" />
		
	    <com.android.view.IconImageButton style="@style/Button_Fragment_Style"
	        android:id="@+id/imageButtonCharacterSelect8"
	        android:contentDescription="@string/desc_select_repaint"
	        android:background="@drawable/icon_tool_repaint" />
	    
		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
	        android:id="@+id/imageButtonCharacterSelect11"
	        android:contentDescription="@string/desc_select_redeform"
	        android:background="@drawable/icon_tool_redeform" />
	    
   	    <com.android.view.IconImageButton style="@style/Button_Fragment_Style"
	        android:id="@+id/imageButtonCharacterSelect9"
	        android:contentDescription="@string/desc_select_rename"
	        android:background="@drawable/icon_tool_rename" />
	            
	    <com.android.view.IconImageButton style="@style/Button_Fragment_Style"
	        android:id="@+id/imageButtonCharacterSelect6"
	        android:contentDescription="@string/desc_select_select"
	        android:background="@drawable/icon_tool_ready" />
	
		<com.android.view.IconImageButton style="@style/Button_Fragment_Style"
		    android:id="@+id/imageButtonCharacterSelect7"
		    android:contentDescription="@string/desc_select_delete"
		    android:background="@drawable/icon_tool_reset" />
	
	</LinearLayout>

</RelativeLayout>
