<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/Layout_Fragment_Style"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    
   	<ImageView style="@style/ImageView_Background_Style"
		android:contentDescription="@string/desc_select_background"
		android:background="@drawable/background_display" />
    
    <com.character.display.DisplayGLSurfaceView style="@style/GLSurfaceView_Style"
        android:id="@+id/displayGLSurfaceViewMain1" />

    <LinearLayout style="@style/Layout_Bottom_Center_FragmentButton_Style">

        <ImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonMain1"
            android:contentDescription="@string/desc_main_new"
            android:background="@drawable/icon_main_creation" />

        <ImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonMain2"
            android:contentDescription="@string/desc_main_play"
            android:background="@drawable/icon_main_game" />

        <ImageButton style="@style/Button_Fragment_Style"
            android:id="@+id/imageButtonMain3"
            android:contentDescription="@string/desc_main_select"
            android:background="@drawable/icon_main_selection" />
        
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/title_app"
        android:textColor="#EEEEEE"
        android:textSize="80sp" />

</RelativeLayout>
