<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/Layout_Fragment_Style"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <LinearLayout style="@style/Layout_Left_FragmentButton_Style" >

        <ImageButton
            android:id="@+id/imageButtonSocial1"
            style="@style/Button_Fragment_Style"
            android:background="@drawable/icon_twitter"
            android:contentDescription="@string/desc_social_twitter" />

        <ImageButton
            android:id="@+id/imageButtonSocial2"
            style="@style/Button_Fragment_Style"
            android:background="@drawable/icon_facebook"
            android:contentDescription="@string/desc_social_facebook" />

	</LinearLayout>
        
    <LinearLayout style="@style/Layout_Center_FragmentButton_Style" >
        
        <ImageButton
            android:id="@+id/imageButtonSocial3"
            style="@style/Button_Fragment_Style"
            android:background="@drawable/icon_share_post"
            android:contentDescription="@string/desc_social_share" />
        
        <ImageButton
            android:id="@+id/imageButtonSocial4"
            style="@style/Button_Fragment_Style"
            android:background="@drawable/icon_share_picture"
            android:contentDescription="@string/desc_social_photo" />
        
    </LinearLayout>
    
    <LinearLayout style="@style/Layout_Right_FragmentButton_Style" >

        <ImageButton
            android:id="@+id/imageButtonSocial5"
            style="@style/Button_Fragment_Style"
            android:background="@drawable/icon_wifi"
            android:contentDescription="@string/desc_social_wifi" />

    </LinearLayout>

</RelativeLayout>