<RelativeLayout style="@style/MainFragmentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <com.create.deform.DeformGLSurfaceView style="@style/GLSurfaceViewWithButtons"
        android:id="@+id/deformGLSurfaceViewDeform1" />

    <LinearLayout style="@style/BigImageButtonLeftLayout">
        
        <ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonDeform1"
            android:contentDescription="@string/desc_deform_add"
            android:background="@drawable/icon_add" />

        <ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonDeform2"
            android:contentDescription="@string/desc_deform_remove"
            android:background="@drawable/icon_remove" />

        <ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonDeform3"
            android:contentDescription="@string/desc_deform_move"
            android:background="@drawable/icon_hand" />
        
		<ImageButton style="@style/BigImageButton"
            android:id="@+id/imageButtonDeform4"
            android:contentDescription="@string/desc_deform_reset"
            android:background="@drawable/icon_reset" />
		
    </LinearLayout>
    
    <LinearLayout style="@style/BigImageButtonRightLayout">
        
    </LinearLayout>

</RelativeLayout>
